--- a/диплом/docker-compose.yml
+++ b/диплом/docker-compose.yml
@@ -7,19 +7,23 @@ services:
       - "8080:80"
     volumes:
       - .:/var/www/html
+    environment:
+      DB_HOST: your-database-host
+      DB_NAME: electronics_shop
+      DB_USER: your-db-user
+      DB_PASS: your-db-password
     depends_on:
       - db
 
   db:
-    image: mysql:5.7
+    image: postgres:13
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: 12345
-      MYSQL_DATABASE: Гардероб
-      MYSQL_USER: root
-      MYSQL_PASSWORD: 12345
+      POSTGRES_DB: electronics_shop
+      POSTGRES_USER: your-db-user
+      POSTGRES_PASSWORD: your-db-password
     volumes:
-      - db_data:/var/lib/mysql
+      - db_data:/var/lib/postgresql/data
 
 volumes:
   db_data:
