docker-compose.yml

--- a/диплом/docker-compose.yml
+++ b/диплом/docker-compose.yml
@@ -7,23 +7,19 @@ services:
       - "8080:80"
     volumes:
       - .:/var/www/html
-    environment:
-      DB_HOST: your-database-host
-      DB_NAME: electronics_shop
-      DB_USER: your-db-user
-      DB_PASS: your-db-password
     depends_on:
       - db
 
   db:
-    image: postgres:13
+    image: mysql:5.7
     restart: always
     environment:
-      POSTGRES_DB: electronics_shop
-      POSTGRES_USER: your-db-user
-      POSTGRES_PASSWORD: your-db-password
+      MYSQL_ROOT_PASSWORD: 12345
+      MYSQL_DATABASE: Гардероб
+      MYSQL_USER: root
+      MYSQL_PASSWORD: 12345
     volumes:
-      - db_data:/var/lib/postgresql/data
+      - db_data:/var/lib/mysql
 
 volumes:
   db_data:
